--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 
 .main {
   background-color: white;
-  margin-top: 110px;
+  margin-top: 60px;
   padding-left: 100px;
   min-width: 1200px;
   height: 500px;
@@ -14,12 +14,12 @@ body {
 	float: left;
 }
 
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   width: 659px;
   height: 494px;
 }
 
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing, .ryu-cool {
   display: none;
 } 
 
@@ -35,6 +35,10 @@ body {
   background-image: url('../images/ryu-throwing-hadouken.png');
 }
 
+.ryu-cool {
+  background-image: url('../images/ryu-cool.gif');
+}
+
 .hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
   background-repeat: no-repeat;
 }
@@ -48,4 +52,15 @@ body {
   top: 167px;
   left: -212px;
   float: left;
+}
+
+.instruct{
+  text-align: center;
+  margin-top: 50px;
+}
+
+.instruct h1 {
+  color: white;
+  font-size: 2em;
+  font-weight: bold;
 }
